--- a/index.html
+++ b/index.html
@@ -3,102 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snotlax Systems | Level Up Your Physique</title>
+    <title>The System | Acquire Your Qualifications</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        .glitch-text { text-shadow: 2px 0 #f97316, -2px 0 #0ea5e9; }
+        body {
+            font-family: 'Rajdhani', sans-serif;
+            background-color: #020617; /* Dark blue/black background */
+            background-image: 
+                radial-gradient(circle at 50% 0%, #1e3a8a10 0%, transparent 50%),
+                radial-gradient(circle at 0% 50%, #0ea5e910 0%, transparent 50%);
+        }
+        .neon-text {
+            text-shadow: 0 0 10px #0ea5e9, 0 0 20px #0ea5e9, 0 0 40px #0ea5e9;
+        }
+        .neon-border {
+            box-shadow: 0 0 10px #0ea5e9, inset 0 0 10px #0ea5e9;
+        }
+        .hologram-box {
+            background: rgba(14, 165, 233, 0.05);
+            border: 1px solid rgba(14, 165, 233, 0.3);
+            backdrop-filter: blur(5px);
+        }
     </style>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        neon: '#0ea5e9', // Cyan-blue
+                        darkblue: '#020617',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
-<body class="bg-black text-white selection:bg-orange-500">
+<body class="text-white selection:bg-neon selection:text-darkblue">
 
-    <nav class="fixed w-full z-50 bg-black/80 backdrop-blur-md border-b border-white/10 py-4">
-        <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
-            <span class="text-2xl font-black italic tracking-tighter uppercase">Snotlax <span class="text-orange-500">Systems</span></span>
-            <a href="#apply" class="bg-orange-600 hover:bg-orange-500 text-sm font-bold px-6 py-2 rounded-full transition-all">Apply Now</a>
-        </div>
-    </nav>
-
-    <section class="relative min-h-screen flex items-center pt-20">
-        <div class="absolute inset-0 opacity-50">
-            <div class="absolute inset-0 bg-gradient-to-r from-black via-black/40 to-transparent z-10"></div>
-            <img src="your-posing-photo.jpg" class="w-full h-full object-cover" alt="Snotlax Physique">
-        </div>
-        
-        <div class="relative z-20 max-w-7xl mx-auto px-6">
-            <div class="max-w-2xl">
-                <span class="text-orange-500 font-bold tracking-widest uppercase text-sm mb-4 block">100% Natural • 185 lbs • Elite Mobility</span>
-                <h1 class="text-6xl md:text-8xl font-black uppercase italic leading-none mb-6 glitch-text">
-                    Build a <span class="text-orange-500">Boss</span> Frame
-                </h1>
-                <p class="text-xl text-zinc-400 mb-10 leading-relaxed">
-                    Tired of being the "stiff gym guy"? I help gamers and athletes build <strong>explosive mass</strong> without losing the ability to move. BJJ-proof strength. Natural aesthetics.
-                </p>
-                <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="#apply" class="bg-white text-black text-center font-black py-4 px-10 rounded-sm hover:bg-orange-500 hover:text-white transition-all uppercase">Start Your Evolution</a>
-                    <a href="#system" class="border border-white/20 text-center py-4 px-10 rounded-sm hover:bg-white/10 transition-all uppercase">The System</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="system" class="py-24 bg-zinc-950 border-y border-white/5">
-        <div class="max-w-7xl mx-auto px-6">
-            <div class="grid md:grid-cols-3 gap-12">
-                <div class="p-8 bg-zinc-900 border border-white/5 rounded-2xl hover:border-orange-500/50 transition-colors">
-                    <div class="text-orange-500 mb-4 text-3xl font-bold">01. Strength</div>
-                    <h3 class="text-2xl font-bold mb-4">Hypertrophy Training</h3>
-                    <p class="text-zinc-400">Scientific program design to maximize your natural potential. Thick chest, broad shoulders, and the "V-taper" look.</p>
-                </div>
-                <div class="p-8 bg-zinc-900 border border-white/5 rounded-2xl hover:border-orange-500/50 transition-colors">
-                    <div class="text-orange-500 mb-4 text-3xl font-bold">02. Agility</div>
-                    <h3 class="text-2xl font-bold mb-4">Functional Movement</h3>
-                    <p class="text-zinc-400">Incorporating BJJ-specific mobility and cartwheel-ready flexibility. Don't just look strong; be dangerous.</p>
-                </div>
-                <div class="p-8 bg-zinc-900 border border-white/5 rounded-2xl hover:border-orange-500/50 transition-colors">
-                    <div class="text-orange-500 mb-4 text-3xl font-bold">03. Fuel</div>
-                    <h3 class="text-2xl font-bold mb-4">The Gamer's Macro Kit</h3>
-                    <p class="text-zinc-400">Custom nutrition plans that fit your lifestyle. No boring chicken and broccoli—just results.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="apply" class="py-24 max-w-4xl mx-auto px-6">
-        <div class="text-center mb-16">
-            <h2 class="text-4xl md:text-5xl font-black uppercase mb-4">Join the Inner Circle</h2>
-            <p class="text-zinc-400">I only take 5 new clients per month to ensure elite-level results.</p>
-        </div>
-        
-        <form action="#" class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-zinc-900 p-8 rounded-3xl border border-white/10">
-            <div class="space-y-2">
-                <label class="text-xs uppercase font-bold text-zinc-500">Name</label>
-                <input type="text" class="w-full bg-black border border-white/10 p-4 rounded-xl focus:border-orange-500 outline-none">
-            </div>
-            <div class="space-y-2">
-                <label class="text-xs uppercase font-bold text-zinc-500">Instagram Handle</label>
-                <input type="text" class="w-full bg-black border border-white/10 p-4 rounded-xl focus:border-orange-500 outline-none">
-            </div>
-            <div class="md:col-span-2 space-y-2">
-                <label class="text-xs uppercase font-bold text-zinc-500">Primary Goal</label>
-                <select class="w-full bg-black border border-white/10 p-4 rounded-xl focus:border-orange-500 outline-none appearance-none">
-                    <option>Build Mass (The Bulk)</option>
-                    <option>Get Shredded (The Cut)</option>
-                    <option>BJJ / Athletic Performance</option>
-                </select>
-            </div>
-            <div class="md:col-span-2 space-y-2">
-                <label class="text-xs uppercase font-bold text-zinc-500">Current Level</label>
-                <textarea rows="4" placeholder="What's your biggest struggle right now?" class="w-full bg-black border border-white/10 p-4 rounded-xl focus:border-orange-500 outline-none"></textarea>
-            </div>
-            <button type="submit" class="md:col-span-2 bg-orange-600 py-5 rounded-xl font-black uppercase tracking-widest hover:bg-orange-500 transition-all shadow-lg shadow-orange-600/20">Apply to Level Up</button>
-        </form>
-    </section>
-
-    <footer class="py-10 text-center border-t border-white/5 text-zinc-600 text-sm">
-        &copy; 2025 Snotlax Systems. Built for the Modern Athlete.
-    </footer>
-
-</body>
-</html>
+    <nav class="fixed w-full z-50 bg-darkblue/80 backdrop-blur-md border-b border-neon/20 py-4">
+        <div class="max-w-7xl mx-auto px-6 flex justify-between items
