--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </ul>
 
             <div class="photo-grid">
-                <img src="assets/Categories.png" alt="Strength, Cardio, and Physique Protocols">
+                <img src="Categories.png" alt="Strength, Cardio, and Physique Protocols">
             </div>
         </section>
 
